js/js.translator/testData/incremental/invalidation/jsModuleAnnotation/lib1/ObjectB.0.kt
//@file:JsNonModule
//@file:JsModule("lib1")
external open class ObjectB<T1, T2>(a: T1 = definedExternally, b: T2 = definedExternally, c: Number = definedExternally) : ObjectA

